<resources>
    <string name="app_name">StuDays</string>
    <string name="notification_channel_id">studays_notification_channel_id</string>
    <string name="notification_channel_name">StuDaysNotificationChannel</string>
    <string name="notification_channel_description">The channel for StuDays notifications.</string>
    <string name="db_name">studaysDB</string>
    <string name="db_log_tag">DB_LOG</string>
    <string name="create_table_lessons_sql">CREATE TABLE IF NOT EXISTS lessons(id INTEGER PRIMARY KEY AUTOINCREMENT, name text, lectureHall text, hourBeginning int, minuteBeginning int, hourEnding int, minuteEnding int, lecturer text, lessonType text, dayOfTheWeek int, oddEvenWeek int);</string>
    <string name="create_table_notes_sql">CREATE TABLE IF NOT EXISTS notes(id INTEGER PRIMARY KEY AUTOINCREMENT, title text, noteText text);</string>
    <string name="create_table_notifications_sql">CREATE TABLE IF NOT EXISTS notifications(noteId INTEGER PRIMARY KEY, timestamp INTEGER);</string>
    <string name="table_lessons_name">lessons</string>
    <string name="table_notes_name">notes</string>
    <string name="table_notifications_name">notifications</string>
    <string name="about_program">О программе</string>
    <string name="about_program_details">StuDays v0.4\nСоздатели\nПрограммист: Сатаров Руслан\nДизайнер: Чернев Константин\nТестировщик: Глущук Анастасия\nМенеджер проекта: Середин Никита\nБизнес-аналитик: Шевель Антон</string>
    <string name="lesson">Предмет</string>
    <string name="lecturer">Преподаватель</string>
    <string name="lecture_hall">Аудитория</string>
    <string name="create">Создать</string>
    <string name="add">Добавить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="question_delete_element">Удалить элемент?</string>
    <string name="question_delete_all">Удалить все?</string>
    <string name="notification">Уведомление</string>
    <string name="enable_notification">Включить уведомление</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="notes">Заметки</string>
    <string name="note_title_hint">Название</string>
    <string name="input_text_hint">Введите текст</string>
    <string name="delete_all">Удалить все</string>
    <string name="lesson_type">Тип занятия</string>
    <string name="beginning">Начало</string>
    <string name="ending">Конец</string>
    <string name="lesson_type_default">Лекция</string>
    <string-array name="lesson_types">
        <item>Лекция</item>
        <item>Семинар</item>
        <item>Практика</item>
        <item>Лабораторная</item>
        <item>Консультация</item>
        <item>Зачет</item>
        <item>Экзамен</item>
    </string-array>
    <string name="dot">.</string>
    <string name="dash">-</string>
    <string name="colon">:</string>
    <string name="vertical_bar">|</string>
    <string name="day_of_the_week">День недели</string>
    <string-array name="days_of_the_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string-array name="days_of_the_week_abridged">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>
    <string name="repeating">Повторение</string>
    <string-array name="odd_even_week">
        <item>По нечетным</item>
        <item>По четным</item>
        <item>Еженедельно</item>
    </string-array>
    <string-array name="timetable_week_labels">
        <item>I неделя</item>
        <item>II неделя</item>
    </string-array>
    <string name="odd_week_tab_title">I неделя</string>
    <string name="even_week_tab_title">II неделя</string>
    <string name="lesson_beginning_hour_default">08</string>
    <string name="lesson_beginning_minute_default">00</string>
    <string name="lesson_ending_hour_default">09</string>
    <string name="lesson_ending_minute_default">30</string>
    <string name="please_fill_name_field">Заполните поле "Предмет"</string>
    <string name="time_order_error_message">Начало занятия не должно быть позже его окончания</string>
</resources>
