<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson.CreateLessonActivity"
    tools:ignore="Autofill,RelativeOverlap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/createLessonNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lesson"
            android:inputType="text|textCapSentences"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/createLessonLecturerField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lecturer"
            android:inputType="text|textCapSentences"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/createLessonLectureHallField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lecture_hall"
            android:inputType="text|textCapSentences"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/beginning"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignStart="@+id/createLessonBeginningLayout"
                android:layout_alignEnd="@+id/createLessonBeginningLayout"
                android:layout_alignBottom="@+id/createLessonBeginningLayout"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/createLessonBeginningLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createLessonHourBeginning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lesson_beginning_hour_default"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/colon"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/createLessonMinuteBeginning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lesson_beginning_minute_default"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/ending"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignStart="@+id/createLessonEndingLayout"
                android:layout_alignEnd="@+id/createLessonEndingLayout"
                android:layout_alignBottom="@+id/createLessonEndingLayout"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/createLessonEndingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createLessonHourEnding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lesson_ending_hour_default"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/colon"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/createLessonMinuteEnding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lesson_ending_minute_default"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/lesson_type"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignStart="@+id/createLessonTypeField"
                android:layout_alignEnd="@+id/createLessonTypeField"
                android:layout_alignBottom="@+id/createLessonTypeField"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/createLessonTypeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Лекция" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_of_the_week"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignStart="@+id/createLessonDayOfTheWeekField"
                android:layout_alignEnd="@+id/createLessonDayOfTheWeekField"
                android:layout_alignBottom="@+id/createLessonDayOfTheWeekField"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/createLessonDayOfTheWeekField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Вторник" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/repeating" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignStart="@+id/createLessonOddEvenWeekField"
                android:layout_alignEnd="@+id/createLessonOddEvenWeekField"
                android:layout_alignBottom="@+id/createLessonOddEvenWeekField"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/createLessonOddEvenWeekField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                tools:text="Каждую неделю" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>