<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/enableNotificationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/enable_notification"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enableNotificationCheckBox"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enableNotificationCheckBox" />

    <TextView
        android:id="@+id/notificationDialogDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/divider2"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_below="@+id/notificationDialogDateView"
        android:layout_alignStart="@+id/notificationDialogDateView"
        android:layout_alignEnd="@+id/notificationDialogDateView"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/notificationDialogDateView"
        app:layout_constraintStart_toStartOf="@+id/notificationDialogDateView"
        app:layout_constraintTop_toBottomOf="@+id/notificationDialogDateView" />

    <TextView
        android:id="@+id/notificationDialogTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:textSize="22sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/notificationDialogTimeView"
        android:layout_alignStart="@+id/notificationDialogTimeView"
        android:layout_alignEnd="@+id/notificationDialogTimeView"
        android:background="@android:color/darker_gray" />

</RelativeLayout>